--- a/css/flickrAPIStyles.css
+++ b/css/flickrAPIStyles.css
@@ -7,44 +7,68 @@
 
 /* Base Styles -------------------- */
 
+/** {*/
+/*	box-sizing: border-box;*/
+/*}*/
+
 h1 {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
-    font-size: 500%;
+    font-size: 20vw;
 }
 
 h2 {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
+    font-size: 8vw;
 }
 
+.main-title-text {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
 .title_overlay p {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
     font-size: 300%;
     line-height: 48px;
 }
 
+/* Layout containers -------------------- */
 
-/* Div Styles -------------------- */
-
-#results {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    -webkit-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    
-    width: 50%;
+.container {
+	width: 95%;
+	max-width: 1260px;
+	background: #fff;
+	margin: auto;
 }
 
-/* Layout containers -------------------- */
+.header {
+	text-align: center;
+}
 
 .photo-container {
 	text-align: center;
 	margin-bottom: 1em;
 	margin-top: 1em;
 }
+
+/*#results {*/
+    /*display: -webkit-flex;*/
+    /*display: flex;*/
+    /*-webkit-flex-direction: column;*/
+    /*flex-direction: column;*/
+    /*-webkit-align-items: center;*/
+    /*align-items: center;*/
+    /*-webkit-justify-content: center;*/
+    /*justify-content: center;*/
+    /*align-self: center;*/
+    
+    /*width: 50%;*/
+/*}*/
 
 /* Page elements -------------------- */
 
@@ -65,4 +89,5 @@ h2 {
 	justify-content: center;
 	align-items: center;
 	background: rgba(0,0,0, .80);
+	overflow: hidden;
 }
