--- a/css/flickrAPIStyles.css
+++ b/css/flickrAPIStyles.css
@@ -14,6 +14,7 @@
 h1 {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
     font-size: 20vw;
+    color: red;
 }
 
 h2 {
@@ -66,7 +67,7 @@ h2 {
     /*-webkit-justify-content: center;*/
     /*justify-content: center;*/
     /*align-self: center;*/
-    
+
     /*width: 50%;*/
 /*}*/
 
@@ -82,7 +83,7 @@ h2 {
 	position: absolute;
 	top: 0;
 	right: 0;
-	bottom: 0; 
+	bottom: 0;
 	left: 0;
 	display: flex;
 	flex-direction: column;
