--- a/css/flickrAPIStyles.css
+++ b/css/flickrAPIStyles.css
@@ -13,28 +13,62 @@
 
 h1 {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
-    font-size: 20vw;
-    color: red;
+    font-size: calc(4vw + 4vh + 2vmin);
 }
 
 h2 {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
-    font-size: 8vw;
+    font-size: calc(1vw + 4vh + 2vmin);
+}
+
+.header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-title-text {
     display: -webkit-flex;
     display: flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
+    -webkit-flex-direction: column;
+    flex-direction: column;
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
 }
+
+.main-title-text h1 {
+    margin: 20px 0;
+}
+
+#query {
+  font-family: 'Lobster', Helvetica, Arial, sans-serif;
+  font-size: xx-large;
+  text-align: center;
+  color: red;
+  width: 90%;
+  height: 100px;
+  border: 5px black solid;
+  margin-bottom: 20px;
+}
+
+#getdata {
+  font-family: 'Lobster', Helvetica, Arial, sans-serif;
+  background: darkgrey;
+  font-size: large;
+  color: white;
+  cursor: pointer;
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+}
+
 .title_overlay p {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
-    font-size: 300%;
+    font-size: xx-large;
     line-height: 48px;
 }
 
@@ -52,7 +86,10 @@ h2 {
 }
 
 .photo-container {
+  overflow: hidden;
 	text-align: center;
+  width: 90vw;
+  margin: auto;
 	margin-bottom: 1em;
 	margin-top: 1em;
 }
@@ -79,7 +116,7 @@ h2 {
 }
 
 .title_overlay {
-    color: #fff;
+  color: #fff;
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -91,4 +128,8 @@ h2 {
 	align-items: center;
 	background: rgba(0,0,0, .80);
 	overflow: hidden;
+}
+
+.title_overlay_off {
+  display:none;
 }
