--- a/css/flickrAPIStyles.css
+++ b/css/flickrAPIStyles.css
@@ -66,12 +66,13 @@ h2 {
 .title_overlay p {
     font-family: 'Lobster', Helvetica, Arial, sans-serif;
     font-size: calc(1vw + 4vh + 2vmin);
-    line-height: 100px;
+    line-height: 50px;
 }
 
 .top-jump {
   display: none;
 }
+
 
 /* Layout containers -------------------- */
 
@@ -149,7 +150,7 @@ img {
     line-height: 60px;
   }
   
-  .top-jump {
+  .top-jump-show {
     display: flex;
     position: fixed;
     bottom: 30px;
